--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         }
 
         .hero-section {
-            background: #111;
+            background: khakhi;
             padding: 60px 0;
         }
 
@@ -40,7 +40,7 @@
         }
 
         .footer {
-            background: #000;
+            background: GREEN;
             padding: 20px 0;
             text-align: center;
             color: blue;
@@ -53,6 +53,14 @@
             a:hover {
                 color: #FFA500; 
             }
+
+            a[href^="mailto:"] {
+                color: GREEN !important; /* Setting the  email links to green */
+            }
+
+                a[href^="mailto:"]:hover {
+                    color: darkblue !important; /* Darker blue on hover */
+                }
 
         .bg-light {
             background-color: #333 !important;
