--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -26,6 +26,14 @@
                 color: #FFA500;
             }
 
+            a[href^="mailto:"] {
+                color: GREEN !important; /* Setting the email links to Green */
+            }
+
+                a[href^="mailto:"]:hover {
+                    color: darkblue !important; /* Darker blue on hover */
+                }
+
         ul {
             color: #FFD700; 
         }
@@ -39,7 +47,7 @@
     <div class="container py-5">
         <h1>@ViewData["Title"]</h1>
 
-        <p>At Contract Monthly Claim System we are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our claiming website ([your website URL]). Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the site.</p>
+        <p>At Contract Monthly Claim System we are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our claiming website . Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the site.</p>
 
         <h2>1. Information We Collect</h2>
 
