--- a/Views/Home/Verify.cshtml
+++ b/Views/Home/Verify.cshtml
@@ -23,7 +23,7 @@
 
         .alert-info {
             background-color: #333 !important; 
-            border-color: #444 !important;
+            border-color: #444 !important;fd
             color: #FFD700 !important; 
         }
 
