--- a/Views/Home/Status.cshtml
+++ b/Views/Home/Status.cshtml
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
-    
+
+
     <style>
         body {
-            background-color: #000 !important; 
-            color: #FFD700 !important; 
+            background-color: #000 !important;
+            color: #FFD700 !important;
         }
 
         h1 {
@@ -26,7 +26,7 @@
         }
 
         .btn-primary {
-            background-color: #FFD700 !important; 
+            background-color: #FFD700 !important;
             border-color: #FFD700 !important; /* Gold button border */
             color: #000 !important; /* Black button text */
         }
@@ -61,7 +61,7 @@
             <p>Claim not found.</p>
         }
 
-        <a href="/Home/Track" class="btn btn-primary">Track Another Claim</a>
+        <a href="/Privacy/Track" class="btn btn-primary">Track Another Claim</a>
     </div>
 </body>
 </html>
