--- a/Views/Home/register.cshtml
+++ b/Views/Home/register.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="card mb-4">
     <div class="card-header">
-        <h3>Personal Details</h3>
+        <h3>Registering</h3>
     </div>
     <div class="card-body">
         <div class="form-group">
@@ -20,3 +20,4 @@
             <input asp-for="LectureID" class="form-control" />
         </div>
     </div>
+   
